# typing_tool

./: Cargo.toml  data.json  words.json
src/: data.rs  main.rs  tui.rs
