[package]
name = "typing_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.24.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
serde_with = { version = "1.14.0", features = ["json"] }
# serde = { version = "1.0.139", features = ["derive", "serde_json"] }
